--- a/src/pages/Pedidos/styles.css
+++ b/src/pages/Pedidos/styles.css
@@ -1,5 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
 
+.loaderContain {
+  height: 60vh;
+  width: 60%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .App-pedidos {
   height: 100vh;
   display: flex;
@@ -169,6 +177,11 @@
 .footerCart {
   width: 100%;
 }
+
+.headerContainer {
+  background-color: #f4f5f7;
+}
+
 .buttonBag:disabled {
   opacity: 0.5;
   cursor: not-allowed;
