--- a/src/components/HeaderPedidos/styles.css
+++ b/src/components/HeaderPedidos/styles.css
@@ -47,3 +47,26 @@
 .navButton:hover {
   border: 1px solid #fff;
 }
+
+.modalOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.75);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 2000;
+}
+
+.modalContent {
+  background: #fff;
+  padding: 20px;
+  border-radius: 4px;
+  max-width: 336px;
+  height: 548px;
+  width: 100%;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
