--- a/src/pages/Pedidos/styles.css
+++ b/src/pages/Pedidos/styles.css
@@ -168,10 +168,18 @@
   border-radius: 0.375rem;
   color: white;
   background-color: var(--Bmarron);
-
   border: 0;
   font-weight: 500;
   font-size: 100%;
+  transition: background-color 0.3s ease, transform 0.1s ease;
+}
+
+.buttonBag:hover {
+  background-color: rgb(70, 23, 12);
+}
+
+.buttonBag:active {
+  transform: scale(0.98); /* Efeito de "pressionado" */
 }
 
 .footerCart {
