--- a/src/pages/Pedidos/styles.css
+++ b/src/pages/Pedidos/styles.css
@@ -39,6 +39,27 @@
   color: #601706;
 }
 
+.modal-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80%;
+  max-width: 600px;
+  background-color: #fff; /* Cor de fundo sólida para o modal */
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.MuiBackdrop-root {
+  background-color: rgba(0, 0, 0, 0.5); /* Cor do fundo do modal */
+}
+.divButtonAdm {
+  background-color: #f4f5f7;
+  padding-right: 90%;
+}
+
 .pedidos-content {
   display: flex;
   justify-content: space-between;
